@@ -47,7 +47,7 @@
 		      'serial_print', 'inout_buildin_led',
           'base_delay', 'base_map',
 		      'servo_move', 'servo_read_degrees',
-          'grove_led', 'grove_button', 'grove_potentiometer', 
+          'grove_led', 'grove_button', 'grove_rotary_angle', 
           'grove_tilt_switch', 'grove_piezo_buzzer',
           'grove_relay', 'grove_temporature_sensor',
           'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 
